adding headless