@@ -19,25 +19,52 @@
  */
 package mod.gottsch.fabric.ddenizens.core.entity.monster;
 
-import mod.gottsch.fabric.ddenizens.core.entity.ai.goal.target.HeadlessRevengeGoal;
 import net.minecraft.entity.EntityType;
 import net.minecraft.entity.LivingEntity;
 import net.minecraft.entity.ai.goal.*;
+import net.minecraft.entity.attribute.DefaultAttributeContainer;
+import net.minecraft.entity.attribute.EntityAttributes;
+import net.minecraft.entity.data.DataTracker;
+import net.minecraft.entity.data.TrackedData;
+import net.minecraft.entity.data.TrackedDataHandlerRegistry;
 import net.minecraft.entity.mob.CreeperEntity;
 import net.minecraft.entity.mob.HostileEntity;
+import net.minecraft.entity.mob.MobEntity;
 import net.minecraft.entity.player.PlayerEntity;
+import net.minecraft.predicate.entity.EntityPredicates;
+import net.minecraft.server.network.ServerPlayerEntity;
+import net.minecraft.util.math.Box;
 import net.minecraft.world.World;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Random;
 
 /**
  * Created by Mark Gottschling on 4/3/2023
  */
 public class Headless extends HostileEntity {
+    // move to abstract class
+    private static final TrackedData<Integer> ANIMATION_SEED;
 
-    protected Headless(EntityType<? extends Headless> entityType, World world) {
+    static {
+        ANIMATION_SEED = DataTracker.registerData(Headless.class, TrackedDataHandlerRegistry.INTEGER);
+    }
+
+    /**
+     *
+     * @param entityType
+     * @param world
+     */
+    public Headless(EntityType<? extends Headless> entityType, World world) {
         super(entityType, world);
+    }
+
+    @Override
+    protected void initDataTracker() {
+        super.initDataTracker();
+        Random random = new Random();
+        this.dataTracker.startTracking(ANIMATION_SEED, random.nextInt(360));
     }
 
     @Override
@@ -65,66 +92,80 @@ public class Headless extends HostileEntity {
          * determines who to target
          * this = pathfinding mob, Player = target, true = must see entity in order to target
          */
-        this.targetSelector.add(2, new HeadlessNearestAttackableTargetGoal<>(this, PlayerEntity.class, true).setGroupRevenge(Headless.class/*, Gazer.class*/));
+        this.targetSelector.add(2, new HeadlessActiveTargetGoal<>(this, PlayerEntity.class, true).setGroupRevenge(Headless.class/*, Gazer.class*/));
     }
 
+    public static DefaultAttributeContainer.Builder createAttributes() {
+        return HostileEntity.createHostileAttributes()
+                .add(EntityAttributes.GENERIC_ATTACK_DAMAGE, 3.5)
+                .add(EntityAttributes.GENERIC_ATTACK_KNOCKBACK, 0.5D)
+                .add(EntityAttributes.GENERIC_ARMOR, 1.0D)
+                .add(EntityAttributes.GENERIC_ARMOR_TOUGHNESS, 1.0D)
+                .add(EntityAttributes.GENERIC_MAX_HEALTH, 24.0)
+                .add(EntityAttributes.GENERIC_FOLLOW_RANGE, 40.0)
+                .add(EntityAttributes.GENERIC_MOVEMENT_SPEED, 0.28F);
+    }
 
+//    @Override
+    public Integer getAnimationSeed() {
+        return this.dataTracker.get(ANIMATION_SEED);
+    }
+
+//    @Override
+    public void setAnimationSeed(Integer seed) {
+        this.dataTracker.set(ANIMATION_SEED, seed);
+    }
 
     /**
      *
      * @param <T>
      */
-    public static class HeadlessNearestAttackableTargetGoal<T extends LivingEntity> extends ActiveTargetGoal<T> {
+    public static class HeadlessActiveTargetGoal<T extends LivingEntity> extends ActiveTargetGoal<T> {
         private static final int ALERT_RANGE_Y = 10;
-        private List<Class<?>> othersToAlert = new ArrayList<>();
+        private boolean groupRevenge;
+        private final List<Class<?>> noHelpTypes = new ArrayList<>();
 
-        /**
-         *
-         * @param mob
-         * @param targetType
-         * @param mustSee
-         */
-        public HeadlessNearestAttackableTargetGoal(Mob mob, Class<T> targetType, boolean mustSee) {
-            super(mob, targetType, mustSee);
+        public HeadlessActiveTargetGoal(MobEntity mob, Class<T> targetType, boolean checkVisibility) {
+            super(mob, targetType, checkVisibility);
         }
 
-        /**
-         *
-         * @param toAlert
-         * @return
-         */
-        public HeadlessNearestAttackableTargetGoal<?> setAlertOthers(Class<?>... toAlert) {
-            this.othersToAlert.addAll(Arrays.asList(toAlert));
+        public HeadlessActiveTargetGoal<T> setGroupRevenge(Class<?> ... noHelpTypes) {
+            this.groupRevenge = true;
+            this.noHelpTypes.addAll(List.of(noHelpTypes));
             return this;
         }
 
         @Override
         public void start() {
             this.mob.setTarget(this.target);
-            if (this.targetType == Player.class || this.targetType == ServerPlayer.class) {
-                this.alertOthers();
+            if (this.targetClass == PlayerEntity.class || this.targetClass == ServerPlayerEntity.class) {
+                this.callSameTypeForRevenge();
             }
             super.start();
         }
 
-        protected void alertOthers() {
-            double distance = this.getFollowDistance();
-            AABB aabb = AABB.unitCubeFromLowerCorner(this.mob.position()).inflate(distance, ALERT_RANGE_Y, distance);
-            List<? extends Mob> list = this.mob.level.getEntitiesOfClass(Mob.class, aabb, EntitySelector.NO_SPECTATORS);
-            Iterator<? extends Mob> iterator = list.iterator();
-            while (iterator.hasNext()) {
-                Mob otherMob = (Mob)iterator.next();
-                if (this.mob != otherMob && otherMob.getTarget() == null) {
-                    if (this.othersToAlert.contains(otherMob.getClass())) {
-                        alertOther(otherMob, this.mob.getLastHurtByMob());
+        protected void callSameTypeForRevenge() {
+            double d = this.getFollowRange();
+            Box box = Box.from(this.mob.getPos()).expand(d, 10.0, d);
+            List<MobEntity> list = this.mob.world.getEntitiesByClass(MobEntity.class, box, EntityPredicates.EXCEPT_SPECTATOR);
+            for (MobEntity mobEntity : list) {
+                if (this.mob == mobEntity || mobEntity.getTarget() != null || (this.mob.getAttacker() != null && mobEntity.isTeammate(this.mob.getAttacker()))) continue;
+                if (this.noHelpTypes != null) {
+                    boolean bl = false;
+                    for (Class<?> class_ : this.noHelpTypes) {
+                        if (mobEntity.getClass() != class_) continue;
+                        bl = true;
+                        break;
                     }
+                    if (bl) continue;
                 }
+                this.setMobEntityTarget(mobEntity, this.mob.getAttacker());
             }
         }
 
-        protected void alertOther(Mob otherMob, LivingEntity target) {
-            otherMob.setTarget(target);
+        protected void setMobEntityTarget(MobEntity mob, LivingEntity target) {
+
+            mob.setTarget(target);
         }
     }
-
 }
